# ppaass-v3-agent-ui

./: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  styles.css  vite.config.ts
backend/: .gitignore  Cargo.toml  tauri.conf.json
backend/src/: main.rs
resources/css/: app.css
src/: App.vue  app.rs  button.rs  main.rs  main.ts  top_nav.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  vo.rs
src/bo/: common.ts  configuration.ts  event.ts  user.ts
src/components/: mod.rs  navi.rs
src/components/console/: mod.rs
styles/stylance/: _index.scss  app.module-bb66a2d.scss
